--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -90,7 +90,8 @@ management:
     endpoints:
         jmx:
             unique-names: true
-
+    security:
+        enabled: false
 ---
 hibernate:
     cache:
@@ -105,7 +106,6 @@ dataSource:
     password: ''
 
     dbCreate: update
-    #dialect: org.hibernate.dialect.H2Dialect
     url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     properties:
         jmxEnabled: true
